# HuweiCodeCraft2021

./: .gitignore  CMakeLists.txt  README.md
include/: IO.h  MigrationInfo.h  PutInfo.h  Request.h  Server.h  ServerBought.h  Structure.h  Vm.h  VmUsed.h  work.h
src/: IO.cpp  MigrationInfo.cpp  PushInfo.cpp  Request.cpp  Server.cpp  ServerBought.cpp  Structure.cpp  Vm.cpp  VmUsed.cpp  main.cpp  work.cpp
